# Moneypit

./: .env.example  .gitignore  README.md  pyproject.toml
moneypit/: __main__.py  auth.py  categorize.py  db.py  main.py  models.py  recurring.py  rules.py
moneypit/importers/: __init__.py  csv_import.py  receipt_scan.py
moneypit/templates/: _rule_row.html  _tx_row.html  base.html  dashboard.html  import.html  login.html  profiles.html  receipt_confirm.html  register.html  rules.html  settings.html  transactions.html
tests/: conftest.py  test_categorize.py  test_csv_import.py  test_date_range.py  test_import_page.py  test_rules.py  test_transactions_page.py
